--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"smar-mcp": "./build/index.js"
 	},
 	"scripts": {
-		"build": "tsc && chmod +x build/index.js",
+		"build": "tsc && node scripts/make-executable.js",
 		"start": "node -r dotenv/config build/index.js",
 		"dev": "npm run build && npm run start",
 		"test": "jest",
